--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --modal-duration: 1s;
     --primary-color: #30336b;
     --secondary-color: #be2edd;
+    --nav-width: 200px;
 }
 
 * {
@@ -12,6 +13,12 @@
 
 body {
     font-family: 'Lato', sans-serif;
+    margin: 0;
+    transition: transform 0.3s ease;
+}
+
+body.show-nav {
+    transform: translate(var(--nav-width));
 }
 
 nav {
@@ -21,7 +28,7 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    width: 200px;
+    width: var(--nav-width);
     height: 100vh;
     z-index: 100;
     transform: translateX(-100%);
@@ -121,6 +128,10 @@ button:focus {
     bottom: 0;
 }
 
+.modal-container.show-modal {
+    display: block;
+}
+
 .modal {
     background-color: #fff;
     border-radius: 5px;
@@ -132,6 +143,8 @@ button:focus {
     transform: translate(-50%, -50%);
     max-width: 100%;
     width: 400px;
+    animation-name: modalopen;
+    animation-duration: var(--modal-duration);
 }
 
 .modal-header {
@@ -142,7 +155,7 @@ button:focus {
 
 .modal-header h3 {
     margin: 0;
-    border-radius: 1px solid #333;
+    border-bottom: 1px solid #333;
 }
 
 .modal-content {
@@ -169,4 +182,14 @@ button:focus {
     position: absolute;
     top: 0;
     right: 0;
+}
+
+
+@keyframes modalopen {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
